# latex-symbol-ocr

./: README.md  pyproject.toml
data/: .gitignore  classes.npy
diagrams/: software_arch.drawio
experiments/seq2seq/encoder-decoder/code/: data.py  eval.py  model.py  recurrent.py
experiments/seq2seq/encoder-decoder/notebooks/: analysis.ipynb  train.ipynb
experiments/seq2seq/encoder-decoder/notes/: todos.md
experiments/seq2seq/mamba/: mamba.ipynb  model.py  tokenizer.ipynb  train.ipynb
experiments/vit/: ViT.py
notebooks/: cnn-revised.ipynb  cnn.ipynb  project.ipynb
notebooks/sequence/mamba/: mamba.ipynb
notebooks/vit/: training.ipynb
sequence/: sequence.ipynb
src/: main.py
src/application/: CNN.py  IClassifier.py  IInputDependant.py  IMapper.py  IPredictor.py  IRenderer.py  LatexSymbolClassifier.py  LatexSymbolMapper.py  LatexSymbolPredictor.py  LatexSymbolRenderer.py  interfaces.py  models.py
src/application/ml/: project.ipynb
src/controllers/: Controller.py  IControllerObserver.py  models.py
src/domain/: IPredictionsObserver.py  Prediction.py  Predictions.py  interfaces.py  models.py
src/presentation/: View.py  models.py
vit/: Attention.py  Block.py  MLP.py  PatchEmbedding.py  ViT.py  training.ipynb
