[tool.poetry]
name = "latex-symbol-ocr"
version = "0.1.0"
description = ""
authors = ["Max Burzer <maxi.burzer@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.2.0"
tk = "^0.1.0"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
opencv-python = "^4.9.0.80"
types-pillow = "^10.1.0.20240106"
pandas-stubs = "^2.1.4.231227"
torch = "^2.1.2"
positional-encodings = {extras = ["pytorch"], version = "^6.0.3"}
transformers = "^4.40.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
